Rimy3D 1.1 with CLI interface, updated Blender plug-in, and better Genome material lookup.

--- a/Rimy3D/source/resources/help/source/de/openingandsaving.htm
+++ b/Rimy3D/source/resources/help/source/de/openingandsaving.htm
@@ -42,7 +42,7 @@ Falls das Modell bereits Vertex Normals besitzt, werden diese beibehalten. Anson
 Berechnet die Vertex Normals auf Grundlage der Smoothing Groups. Jedes Triangle besitzt standardm&auml;&szlig;ig die Smoothing Group 0.<br>
 <br>
 </font><i><font size=2 style="font-family:'verdana'; font-size:10pt; font-style:italic; " >Per Winkel neu berechnen</font></i><font size=2 style="font-family:'verdana'; font-size:10pt; " ><br>
-Der Neigungswinkel zwischen zwei Triangles entscheidet dar&uuml;ber, ob die gemeinsame Kante hart oder weich erscheint. Wird die Einstellung 0° gew&auml;hlt, erscheinen alle Kanten hart, bei einer Einstellung von 180° erscheinen alle Kanten weich. H&auml;ufig ist ein Wert zwischen 60° und 90° geeignet.
+Der Neigungswinkel zwischen zwei Triangles entscheidet dar&uuml;ber, ob die gemeinsame Kante hart oder weich erscheint. Wird die Einstellung 0&deg; gew&auml;hlt, erscheinen alle Kanten hart, bei einer Einstellung von 180&deg; erscheinen alle Kanten weich. H&auml;ufig ist ein Wert zwischen 60&deg; und 90&deg; geeignet.
 </font></p></td>
 </tr>
 </table>
@@ -57,5 +57,9 @@ Der Neigungswinkel zwischen zwei Triangles entscheidet dar&uuml;ber, ob die geme
 <p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Zur Liste der Quelldateien k&ouml;nnen einzelne 3D-Dateien oder auch ganze Ordner hinzugef&uuml;gt werden. Alle diese Dateien werden nach einem Klick auf 'Start' in das ausge&auml;hlte Zielformat umgewandelt. Es stehen die selben Exporteinstellungen zur Verf&uuml;gung wie beim Speichern einzelner Dateien.</font></p>
 
 <p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Die neuen Dateien werden wahlweise in den gleichen Ordnern wie die Quelldateien gespeichert oder in das ausgew&auml;hlte Zielverzeichnis (dazu muss das H&auml;kchen bei 'Ausgabe in den Quellverzeichnissen' entfernt werden). Falls dabei Fehler auftreten, werden diese in den Log ausgegeben.</font></p>
+
+<h2 align="left" style="font-size:12pt;margin-top:12.00pt;margin-bottom:6.00pt;text-align:left;background-color:#000000; " ><b><font size=4 color=white style="font-family:'verdana'; font-size:13pt; color:white; font-weight:bold; " >Bedienung per Kommandozeile</font></b></h2>
+
+<p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><b><font size=2 style="font-family:'verdana'; font-size:10pt; font-weight:bold; " >Rimy3D</font></b><font size=2 style="font-family:'verdana'; font-size:10pt; " > unterst&uuml;tzt das Umwandeln von 3D-Dateien per Kommandozeile. Der Befehl </font><b><font size=2 style="font-family:'courier new'; font-size:10pt; font-weight:bold; " >Rimy3D.exe -help</font></b><font size=2 style="font-family:'verdana'; font-size:10pt; " > zeigt eine ausf&uuml;hrliche Erkl&auml;rung zur Bedienung an.</font></p>
 </body>
 </html>
