--- a/Rimy3D/source/resources/help/source/en/fileformats.htm
+++ b/Rimy3D/source/resources/help/source/en/fileformats.htm
@@ -301,6 +301,19 @@ Whenever possible you should prefer </font><b><font size=2 style="font-family:'v
 		</font><a href="_xcom.htm"><font size=2 style="font-family:'verdana'; font-size:10pt; " >Information on Risen collision meshes</font></a><font size=2 style="font-family:'verdana'; font-size:10pt; " >
 	</font></p></td>
 </tr>
+<tr valign=top>
+	<td style="border-top:0.50pt solid black; border-bottom:0.50pt solid black; border-left:0.50pt solid black; border-right:0.50pt solid black; "><p align="left" style="margin-left:5.75pt;margin-right:6.50pt;margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Risen 3 Mesh</font></p></td>
+	<td style="border-top:0.50pt solid black; border-bottom:0.50pt solid black; border-left:0.50pt solid black; border-right:0.50pt solid black; "><p align="left" style="margin-left:5.75pt;margin-right:6.50pt;margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >.r3msh</font></p></td>
+	<td style="border-top:0.50pt solid black; border-bottom:0.50pt solid black; border-left:0.50pt solid black; border-right:0.50pt solid black; "><p align="left" style="margin-left:5.75pt;margin-right:6.50pt;margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " ></font></p><ul>
+		<li style="font-size:10pt;"><p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Object names
+		</font></p></li><li style="font-size:10pt;"><p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Geometry
+		</font></p></li><li style="font-size:10pt;"><p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Texture coordinates
+		</font></p></li><li style="font-size:10pt;"><p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Vertex normals
+		</font></p></li><li style="font-size:10pt;"><p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Vertex colors
+		</font></p></li></ul><p align="left" style="margin-left:5.75pt;margin-right:6.50pt;margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >
+	</font></p></td>
+	<td style="border-top:0.50pt solid black; border-bottom:0.50pt solid black; border-left:0.50pt solid black; border-right:0.50pt solid black; "></td>
+</tr>
 </table>
 <p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >(*) </font><i><font size=2 style="font-family:'verdana'; font-size:10pt; font-style:italic; " >Texture file paths are extracted from the Gothic 3/Risen materials if available.</font></i><font size=2 style="font-family:'verdana'; font-size:10pt; " ></font></p>
 
