--- a/Rimy3D/source/resources/help/source/en/openingandsaving.htm
+++ b/Rimy3D/source/resources/help/source/en/openingandsaving.htm
@@ -42,7 +42,7 @@ If the model already has vertex normals, they are retained. Otherwise they are c
 Calculates the vertex normals based on the smoothing groups. Each triangle is assigned the smoothing group 0 by default.<br>
 <br>
 </font><i><font size=2 style="font-family:'verdana'; font-size:10pt; font-style:italic; " >Recalculate By Angle</font></i><font size=2 style="font-family:'verdana'; font-size:10pt; " ><br>
-The angle between two triangles determines whether the common edge appears soft or hard. If an angle of 0° is chosen, all edges appear hard, whereas with 180° all appear soft. In most cases a value between 60° and 90° is appropriate.
+The angle between two triangles determines whether the common edge appears soft or hard. If an angle of 0&deg; is chosen, all edges appear hard, whereas with 180&deg; all appear soft. In most cases a value between 60&deg; and 90&deg; is appropriate.
 </font></p></td>
 </tr>
 </table>
@@ -57,5 +57,9 @@ The angle between two triangles determines whether the common edge appears soft 
 <p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Individual files or entire folders can be added to the list of source files. All of these files are converted to the target file format with a click on 'Start'. The same export settings are available as when exporting single files.</font></p>
 
 <p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >The new files are saved either in the same directories as the source files or in the selected target directory, depending on the state of the bottom check box. If errors occur during the conversion they are printed in the log.</font></p>
+
+<h2 align="left" style="font-size:12pt;margin-top:12.00pt;margin-bottom:6.00pt;text-align:left;background-color:#000000; " ><b><font size=4 color=white style="font-family:'verdana'; font-size:13pt; color:white; font-weight:bold; " >Command line interface</font></b></h2>
+
+<p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><b><font size=2 style="font-family:'verdana'; font-size:10pt; font-weight:bold; " >Rimy3D</font></b><font size=2 style="font-family:'verdana'; font-size:10pt; " > supports the conversion of 3D files via command line interface. The command </font><b><font size=2 style="font-family:'courier new'; font-size:10pt; font-weight:bold; " >Rimy3D.exe -help</font></b><font size=2 style="font-family:'verdana'; font-size:10pt; " > shows an extensive explanation of the usage.</font></p>
 </body>
 </html>
