--- a/Rimy3D/source/resources/help/source/de/fileformats.htm
+++ b/Rimy3D/source/resources/help/source/de/fileformats.htm
@@ -301,6 +301,19 @@ Wann immer m&ouml;glich, sollten Sie die Benutzung des </font><b><font size=2 st
 		</font><a href="_xcom.htm"><font size=2 style="font-family:'verdana'; font-size:10pt; " >Hinweise zum Export von Risen Collision Meshes</font></a><font size=2 style="font-family:'verdana'; font-size:10pt; " >
 	</font></p></td>
 </tr>
+<tr valign=top>
+	<td style="border-top:0.50pt solid black; border-bottom:0.50pt solid black; border-left:0.50pt solid black; border-right:0.50pt solid black; "><p align="left" style="margin-left:5.75pt;margin-right:6.50pt;margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Risen 3 Mesh</font></p></td>
+	<td style="border-top:0.50pt solid black; border-bottom:0.50pt solid black; border-left:0.50pt solid black; border-right:0.50pt solid black; "><p align="left" style="margin-left:5.75pt;margin-right:6.50pt;margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >.r3msh</font></p></td>
+	<td style="border-top:0.50pt solid black; border-bottom:0.50pt solid black; border-left:0.50pt solid black; border-right:0.50pt solid black; "><p align="left" style="margin-left:5.75pt;margin-right:6.50pt;margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " ></font></p><ul>
+		<li style="font-size:10pt;"><p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Objektnamen
+		</font></p></li><li style="font-size:10pt;"><p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Geometrie
+		</font></p></li><li style="font-size:10pt;"><p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Texturkoordinaten
+		</font></p></li><li style="font-size:10pt;"><p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Vertex Normals
+		</font></p></li><li style="font-size:10pt;"><p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >Vertex Colors
+		</font></p></li></ul><p align="left" style="margin-left:5.75pt;margin-right:6.50pt;margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >
+	</font></p></td>
+	<td style="border-top:0.50pt solid black; border-bottom:0.50pt solid black; border-left:0.50pt solid black; border-right:0.50pt solid black; "></td>
+</tr>
 </table>
 <p align="left" style="margin-top:0.00pt;margin-bottom:6.00pt;text-align:left;" ><font size=2 style="font-family:'verdana'; font-size:10pt; " >(*) </font><i><font size=2 style="font-family:'verdana'; font-size:10pt; font-style:italic; " >Texturdateipfade werden aus den Gothic 3-/Risen-Materialien ausgelesen, wenn verf&uuml;gbar.</font></i><font size=2 style="font-family:'verdana'; font-size:10pt; " ></font></p>
 
